Comment out flex property in `#site-header .brand` to address layout issue and add cached SCSS files for build consistency.

--- a/assets/scss/supports/_header.scss
+++ b/assets/scss/supports/_header.scss
@@ -14,7 +14,7 @@
 }
 
 #site-header .brand {
-  flex: 1;
+  /*flex: 1;*/
   display: flex;
   align-items: center;
 }
